# getting-started-llvm-c-api

./: .clang-format  .clang-tidy  .envrc  .gitignore  .lvimrc  CMakeLists.txt  LICENSE  README.md  lib.hpp  vcpkg.json
cmake/: LLVMProject.cmake  ProjectDefaults.cmake
src/: CMakeLists.txt  annotation.cpp  annotation.hpp  lexer.cpp  lexer.hpp  lexer_symbols.hpp  lexer_test.cpp  lib.cpp  lib.hpp  main.cpp  orcv2jit.cpp  orcv2jit.hpp  parser.cpp  parser.hpp  parser_test.cpp  test.cpp  utils_for_test.hpp
src/utils/: chars.hpp  static_map.hpp  strings.hpp
